<resources>
    <string name="app_name">Melody</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="new_comp_text">New</string>


    <string-array name="quotes">

        <item>I really believe in melody.</item>
        <item>With a good melody music gets me through everything.</item>
        <item>Music has a poetry of its own, and that poetry is called melody.</item>
        <item>Every soul is a melody which needs renewing.</item>
        <item>Great melody over great riffs is, to me, the secret of it all.</item>
        <item>I find sadness and strife to be so much more interesting with an upbeat melody.</item>
        <item>Never be ashamed to write a melody that people remember.</item>
        <item>Because if you\'ve got the wit, you can make anything into a melody, ultimately.</item>
        <item>The heart of the melody can never be put down on paper.</item>
        <item>The way I see it, there\'s only one melody for any song.</item>
        <item>I write a melody and then change it and change it until I get it the way I like it.</item>

    </string-array>


    <string-array name="authors">

        <item>Aulis Sallinen</item>
        <item>Drake Bell</item>
        <item>Joshua Logan</item>
        <item>Stephane Mallarme</item>
        <item>Steven Tyler</item>
        <item>Zooey Deschanel</item>
        <item>Burt Bacharach</item>
        <item>Gerry Mulligan</item>
        <item>Pablo Casals</item>
        <item>Ben Folds</item>
        <item>Mike Stoller</item>

    </string-array>


    <string name="new_user_hint">Type your name maestro</string>
    <string name="nav_help">Help</string>
    <string name="nav_compositions">Compositions</string>
    <string name="nav_change_theme">Change Theme</string>
    <string name="nav_change_user">Change User</string>
    <string name="nav_share">Share</string>
    <string name="nav_export">Export</string>
    <string name="nav_communicate">Communicate</string>
    <string name="toolbar_play">Play</string>
    <string name="toolbar_save">Save</string>
    <string name="toolbar_export_MP3">Export as .mp3</string>
    <string name="toolbar_export_PDF">Export as .pdf</string>
    <string name="transition_profile">profile</string>
    <string name="alert_leave_comp">Exit</string>
    <string name="alert_save_comp">Save Composition before exit?</string>
    <string name="no">No</string>
    <string name="permission_text">Please provide permissions for saving file</string>
    <string name="dialog_new_page_picker">Pick page type</string>
    <string name="dialog_rename">Rename</string>
    <string name="toast_no_name">Write Your Name Maestro</string>
    <string name="alert_delete_title">Delete</string>
    <string name="alert_delete_text">Do you really want to delete this melody?</string>
    <string name="alert_delete_user_title">Warning</string>
    <string name="alert_delete_user_text">All melodies of this user will be lost! \nDelete anyway? </string>
    <string name="export_dir_help">File saved in folder</string>
    <string name="sound_pool_exception">Sounds not set</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_compositions">CompositionsActivity</string>
    <string name="no_title">Give a Title to your Composition</string>
    <string name="new_content_description">New</string>
    <string name="single_line_radio_button">Single</string>
    <string name="double_line_radio_button">Double</string>
    <string name="give_a_name_to_your_masterpiece">Give a Name to Your Masterpiece</string>
    <string name="label_composers">Composers</string>
    <string name="label_files">Select File</string>
    <string name="string_save_ok">Melody saved</string>
    <string name="pdf_export_complete">PDF saved in folder</string>
    <string name="pdf_exporting_in_process">Now Exporting...</string>
    <string name="share_label">Your Files</string>
    <string name="popup_open">Open</string>
    <string name="popup_share">Share</string>


</resources>
