<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play_sound"
        android:title="@string/toolbar_play"
        android:icon="@drawable/key_play_button"
        app:showAsAction="always"
        android:orderInCategory="80"/>
    <item android:id="@+id/action_save"
        android:icon="@drawable/key_save_button"
        app:showAsAction="ifRoom"
        android:title="@string/toolbar_save"
        android:orderInCategory="90"/>
    <item android:id="@+id/action_share"
        android:icon="@drawable/key_share_button"
        app:showAsAction="ifRoom"
        android:title="@string/toolbar_share"
        android:orderInCategory="90"/>
    <item android:id="@+id/action_export_mp3"
        android:orderInCategory="110"
        android:title="@string/toolbar_export_MP3"
        app:showAsAction="never"/>
    <item android:id="@+id/action_export_pdf"
        android:orderInCategory="120"
        android:title="@string/toolbar_export_PDF"
        app:showAsAction="never"/>
</menu>
