<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/sheet_type_radio_group"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_type_one_hand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/single_line_radio_button"/>
        <RadioButton
            android:id="@+id/radio_type_two_hand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/double_line_radio_button"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/dialog_new_comp_name"
            android:layout_width="match_parent"
            android:hint="@string/give_a_name_to_your_masterpiece"
            android:lines="1"
            android:maxLines="1"
            android:maxLength="15"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <Button
            android:id="@+id/button_dialog_OK"
            android:text="@string/dialog_OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginRight="@dimen/margin_big"
            android:layout_marginEnd="@dimen/margin_big"/>
        <Button
            android:id="@+id/button_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/dialog_cancel"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_toLeftOf="@id/button_dialog_OK"
            android:layout_toStartOf="@id/button_dialog_OK"/>
    </RelativeLayout>

</LinearLayout>